--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -5,3 +5,16 @@
 body {
     margin: 80px 80px;
 }
+
+h1 {
+    font-size: 48px;
+}
+
+a {
+    font-size: 16px;
+    color: green;
+}
+
+th, td {
+    font-size: 16px;
+}
